fixed alignment issue with carousel

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -52,3 +52,8 @@ body {
   background-size: cover;
   min-height: 50vh;
 }
+
+.portfolio {
+  margin: 4rem 0 2rem 0;
+  color: black;
+}
